--- a/index.html
+++ b/index.html
@@ -7,72 +7,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/styles.css" />
 
     <title>Document</title>
   </head>
 
-  <body>
-    <header>
+  <body class="studio-main">
+    <header class="page-header">
       <nav>
-        <a href="">WebStudio</a>
+        <a href="" class="logo link"> <span class="web-logo">Web</span>Studio</a>
 
-        <ul>
-          <li><a href="">Студія</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link current">Студія</a></li>
 
-          <li><a href="./portfolio.html">Портфоліо</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
 
-          <li><a href="">Контакти</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <ul class="contact list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-link link"
+            >info@devstudio.com</a
+          >
+        </li>
 
-        <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a href="tel:380961111111" class="contact-link link">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
 
-        <button type="button">Замовити послугу</button>
+        <button type="button" class="hero-button">Замовити послугу</button>
       </section>
 
-      <section>
+      <section class="features">
         <h2>Чому ми?</h2>
 
-        <ul>
+        <ul class="list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
 
-            <p>
+            <p class="features-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції
             </p>
           </li>
 
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
 
-            <p>
+            <p class="features-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
 
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="features-title">ПЛАНУВАННЯ</h3>
 
-            <p>
+            <p class="features-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
 
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 
-            <p>
+            <p class="features-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -80,13 +87,13 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="work">
+        <h2 class="work-title">Чим ми займаємося</h2>
 
-        <ul>
+        <ul class="list">
           <li>
             <img
-              src="./goit-markup-hw-1-repos/goit-markup-hw-01/images/box1.jpg"
+              src="./images-studio/box1.jpg"
               alt="Людина, що працює на планшеті"
               width="370"
             />
@@ -94,7 +101,7 @@
 
           <li>
             <img
-              src="./goit-markup-hw-1-repos/goit-markup-hw-01/images/box2.jpg"
+              src="./images-studio/box2.jpg"
               alt="Людина, яка тримає телефон перед ноутбуком"
               width="370"
             />
@@ -102,7 +109,7 @@
 
           <li>
             <img
-              src="./goit-markup-hw-1-repos/goit-markup-hw-01/images/box3.jpg"
+              src="./images-studio/box3.jpg"
               alt="Людина, яка тримає планшет з палітрою"
               width="370"
             />
@@ -110,49 +117,49 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
 
-        <ul>
+        <ul class="list">
           <li>
             <img
-              src="./goit-markup-hw-1-repos/goit-markup-hw-01/images/img1.jpg"
+              src="./images-studio/img1.jpg"
               alt="Фото члена команди"
               width="270"
             />
 
-            <h3>Ігор Дем'яненко</h3>
+            <h3 class="team-member">Ігор Дем'яненко</h3>
 
-            <p>Product Designer</p>
+            <p class="team-job">Product Designer</p>
           </li>
 
           <li>
             <img
-              src="./goit-markup-hw-1-repos/goit-markup-hw-01/images/img2.jpg"
+              src="./images-studio/img2.jpg"
               alt="Фото члена команди"
               width="270"
             />
 
-            <h3>Ольга Рєпіна</h3>
+            <h3 class="team-member">Ольга Рєпіна</h3>
 
-            <p>Frontend Developer</p>
+            <p class="team-job">Frontend Developer</p>
           </li>
 
           <li>
             <img
-              src="./goit-markup-hw-1-repos/goit-markup-hw-01/images/img3.jpg"
+              src="./images-studio/img3.jpg"
               alt="Фото члена команди"
               width="270"
             />
 
-            <h3>Микола Тарасов</h3>
+            <h3 class="team-member">Микола Тарасов</h3>
 
-            <p>Marketing</p>
+            <p class="team-job">Marketing</p>
           </li>
 
           <li>
             <img
-              src="./goit-markup-hw-1-repos/goit-markup-hw-01/images/img4.jpg"
+              src="./images-studio/img4.jpg"
               alt="Фото члена команди"
               width="270"
             />
@@ -165,14 +172,28 @@
       </section>
     </main>
 
-    <footer>
-      <a href="">WebStudio</a>
+    <footer class="footer">
+      <a href="" class="footer-logo link">
+        <span class="web-logo">Web</span>Studio</a
+      >
 
       <address>
-        <ul>
-          <li><a href=""> м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+        <ul class="address list">
+          <li>
+            <a href="" class="address-street link">
+              м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="address-contact link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:380961111111" class="address-contact link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
