--- a/portfolio.html
+++ b/portfolio.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/styles.css" />
+    
+
     <title>Document</title>
 </head>
-<body>
-    <header>
-        <nav>
-          <a href="./index.html">WebStudio</a>
-  
-          <ul>
-            <li><a href="./index.html">Студія</a></li>
-  
-            <li><a href="./portfolio.html">Портфоліо</a></li>
-  
-            <li><a href="">Контакти</a></li>
-          </ul>
-        </nav>
-  
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-  
-          <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </header>
+<body class="portfolio-main">
+  <header class="page-header">
+    <nav>
+      <a href="" class="logo link"> <span class="web-logo">Web</span>Studio</a>
+
+      <ul class="site-nav list">
+        <li><a href="./index.html" class="link">Студія</a></li>
+
+        <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+
+        <li><a href="" class="link">Контакти</a></li>
+      </ul>
+    </nav>
+
+    <ul class="contact list">
+      <li>
+        <a href="mailto:info@devstudio.com" class="contact-link link"
+          >info@devstudio.com</a
+        >
+      </li>
+
+      <li>
+        <a href="tel:380961111111" class="contact-link link">+38 096 111 11 11</a>
+      </li>
+    </ul>
+  </header>
 
       <section>
 
 <!-- Potfolio nav -->
-<ul>
-  <li>  <button type="button">Усі</button>
+<ul class="nav list">
+  <li>  <button type="button" class="nav-button">Усі</button>
   </li>
-  <li>  <button type="button">Веб-сайти</button>
+  <li>  <button type="button" class="nav-button">Веб-сайти</button>
   </li>
-  <li>  <button type="button">Додатки</button>
+  <li>  <button type="button" class="nav-button">Додатки</button>
   </li>
-  <li>  <button type="button">Дизайн</button>
+  <li>  <button type="button" class="nav-button">Дизайн</button>
   </li>
-  <li>  <button type="button">Маркетинг</button>
+  <li>  <button type="button" class="nav-button">Маркетинг</button>
   </li>
 </ul>
   
@@ -47,83 +56,94 @@
     
 
 <!-- Photos for portfolio -->
-      <ul>
-        <li>
-          <a href="">
-            <img src="./images/port1.jpg" alt="Ноутбук">
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+      <ul class=" portfolio list">
+          <a href="" class="link">
+            <img src="./images/port1.jpg" alt="Ноутбук" width="370">
+            <h2 class="portfolio-title">Технокряк</h2>
+            <p class="portfolio-text">Веб-сайт</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/port2.jpg" alt=" Два спортсмена">
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+        <li class="portfolio-item">
+          <a href="" class="link">
+            <img src="./images/port2.jpg" alt=" Два спортсмена" width="370">
+            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+            <p class="portfolio-text">Дизайн</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/port3.jpg" alt="Лого ресторану з рибою">
-            <h2>Ресторан Seafood</h2>
-            <p>Додаток</p>
+        <li class="portfolio-item">
+          <a href="" class="link">
+            <img src="./images/port3.jpg" alt="Лого ресторану з рибою" width="370">
+            <h2 class="portfolio-title">Ресторан Seafood</h2>
+            <p class="portfolio-text">Додаток</p>
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/port4.jpg" alt="Навушники">
-            <h2>Проєкт Prime</h2>
-            <p>Маркетинг</p>
+        <li class="portfolio-item">
+          <a href="" class="link">
+            <img src="./images/port4.jpg" alt="Навушники" width="370">
+            <h2 class="portfolio-title">Проєкт Prime</h2>
+            <p class="portfolio-text">Маркетинг</p>
           </a>
         </li>
-      </ul>
-  <ul>
-    <li>
-      <a href="">
-        <img src="./images/port5.jpg" alt="Пакувальні коробки">
-        <h2>Проєкт Boxes</h2>
-        <p>Додаток</p>
+    <li class="portfolio-item">
+      <a href="" class="link">
+        <img src="./images/port5.jpg" alt="Пакувальні коробки" width="370">
+        <h2 class="portfolio-title">Проєкт Boxes</h2>
+        <p class="portfolio-text">Додаток</p>
       </a>
     </li>
-    <li>
-      <a href="">
-        <img src="./images/port6.jpg" alt="Монітор">
-        <h2>Inspiration has no Borders</h2>
-        <p>Веб-сайт</p>
+    <li class="portfolio-item">
+      <a href="" class="link">
+        <img src="./images/port6.jpg" alt="Монітор" width="370">
+        <h2 class="portfolio-title">Inspiration has no Borders</h2>
+        <p class="portfolio-text">Веб-сайт</p>
       </a>
     </li>
-    <li>
-      <a href="">
-        <img src="./images/port7.jpg" alt="Журнал">
-        <h2>Видання Limited Edition</h2>
-        <p>Дизайн</p>
+    <li class="portfolio-item">
+      <a href="" class="link">
+        <img src="./images/port7.jpg" alt="Журнал" width="370">
+        <h2 class="portfolio-title">Видання Limited Edition</h2>
+        <p class="portfolio-text">Дизайн</p>
       </a>
     </li>
-    <li>
-      <a href="">
-        <img src="./images/port8.jpg" alt="Тег">
-        <h2>Проєкт LAB</h2>
-        <p>Маркетинг</p>
+    <li class="portfolio-item">
+      <a href="" class="link">
+        <img src="./images/port8.jpg" alt="Тег" width="370">
+        <h2 class="portfolio-title">Проєкт LAB</h2>
+        <p class="portfolio-text">Маркетинг</p>
       </a>
     </li>
-    <li>
-      <a href="">
-        <img src="./images/port9.jpg" alt="Ноутбук">
-        <h2>Growing Business</h2>
-        <p>Додаток</p>
+    <li class="portfolio-item">
+      <a href="" class="link">
+        <img src="./images/port9.jpg" alt="Ноутбук" width="370">
+        <h2 class="portfolio-title">Growing Business</h2>
+        <p class="portfolio-text">Додаток</p>
       </a>
     </li>
   </ul>
 </section>
 
-<footer>
-  <a href="">WebStudio</a>
+<footer class="footer">
+  <a href="" class="footer-logo link">
+    <span class="web-logo">Web</span>Studio</a
+  >
 
   <address>
-    <ul>
-      <li><a href=""> м. Київ, пр-т Лесі Українки, 26</a></li>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+    <ul class="address list">
+      <li>
+        <a href="" class="address-street link">
+          м. Київ, пр-т Лесі Українки, 26</a
+        >
+      </li>
+      <li>
+        <a href="mailto:info@devstudio.com" class="address-contact link"
+          >info@devstudio.com</a
+        >
+      </li>
+      <li>
+        <a href="tel:380961111111" class="address-contact link"
+          >+38 096 111 11 11</a
+        >
+      </li>
     </ul>
   </address>
 </footer>
