--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/styles.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
-    
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    />
+
     <title>Document</title>
-    
   </head>
 
   <body class="studio-main">
     <header class="page-header">
       <nav>
-        <a href="" class="logo link"> <span class="web-logo">Web</span>Studio</a>
+        <a href="" class="logo link">
+          <span class="web-logo">Web</span>Studio</a
+        >
 
         <ul class="site-nav list">
           <li><a href="./index.html" class="link current">Студія</a></li>
@@ -34,7 +38,9 @@
         </li>
 
         <li>
-          <a href="tel:380961111111" class="contact-link link">+38 096 111 11 11</a>
+          <a href="tel:380961111111" class="contact-link link"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
