--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </section>
 
       <section class="features">
-        <h2>Чому ми?</h2>
+        <h2 class="visually-hidden">Чому ми?</h2>
 
         <ul class="list">
           <li>
@@ -99,7 +99,7 @@
         <ul class="list">
           <li>
             <img
-              src="./images-studio/box1.jpg"
+              src="./images/images-studio/box1.jpg"
               alt="Людина, що працює на планшеті"
               width="370"
             />
@@ -107,7 +107,7 @@
 
           <li>
             <img
-              src="./images-studio/box2.jpg"
+              src="./images/images-studio/box2.jpg"
               alt="Людина, яка тримає телефон перед ноутбуком"
               width="370"
             />
@@ -115,7 +115,7 @@
 
           <li>
             <img
-              src="./images-studio/box3.jpg"
+              src="./images/images-studio/box3.jpg"
               alt="Людина, яка тримає планшет з палітрою"
               width="370"
             />
@@ -129,7 +129,7 @@
         <ul class="list">
           <li>
             <img
-              src="./images-studio/img1.jpg"
+              src="./images/images-studio/img1.jpg"
               alt="Фото члена команди"
               width="270"
             />
@@ -141,7 +141,7 @@
 
           <li>
             <img
-              src="./images-studio/img2.jpg"
+              src="./images/images-studio/img2.jpg"
               alt="Фото члена команди"
               width="270"
             />
@@ -153,7 +153,7 @@
 
           <li>
             <img
-              src="./images-studio/img3.jpg"
+              src="./images/images-studio/img3.jpg"
               alt="Фото члена команди"
               width="270"
             />
@@ -165,14 +165,14 @@
 
           <li>
             <img
-              src="./images-studio/img4.jpg"
+              src="./images/images-studio/img4.jpg"
               alt="Фото члена команди"
               width="270"
             />
 
-            <h3>Михайло Єрмаков</h3>
+            <h3 class="team-member">Михайло Єрмаков</h3>
 
-            <p>UI Designer</p>
+            <p class="team-job">UI Designer</p>
           </li>
         </ul>
       </section>
