--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,9 @@
     </ul>
   </header>
 
+  <main>
       <section>
-
+<h1 class="portfolio-main-title visually-hidden">Portfolio</h1>
 <!-- Potfolio nav -->
 <ul class="nav list">
   <li>  <button type="button" class="nav-button">Усі</button>
@@ -59,69 +60,74 @@
 <!-- Photos for portfolio -->
       <ul class=" portfolio list">
           <a href="" class="link">
-            <img src="./images/port1.jpg" alt="Ноутбук" width="370">
+            <img src="./images/images-portfolio/port1.jpg" alt="Ноутбук" width="370">
             <h2 class="portfolio-title">Технокряк</h2>
             <p class="portfolio-text">Веб-сайт</p>
           </a>
         </li>
         <li class="portfolio-item">
           <a href="" class="link">
-            <img src="./images/port2.jpg" alt=" Два спортсмена" width="370">
+            <img src="./images/images-portfolio/port2.jpg" alt=" Два спортсмена" width="370">
             <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
             <p class="portfolio-text">Дизайн</p>
           </a>
         </li>
         <li class="portfolio-item">
           <a href="" class="link">
-            <img src="./images/port3.jpg" alt="Лого ресторану з рибою" width="370">
+            <img src="./images/images-portfolio/port3.jpg" alt="Лого ресторану з рибою" width="370">
             <h2 class="portfolio-title">Ресторан Seafood</h2>
             <p class="portfolio-text">Додаток</p>
           </a>
         </li>
         <li class="portfolio-item">
           <a href="" class="link">
-            <img src="./images/port4.jpg" alt="Навушники" width="370">
+            <img src="./images/images-portfolio/port4.jpg" alt="Навушники" width="370">
             <h2 class="portfolio-title">Проєкт Prime</h2>
             <p class="portfolio-text">Маркетинг</p>
           </a>
         </li>
     <li class="portfolio-item">
       <a href="" class="link">
-        <img src="./images/port5.jpg" alt="Пакувальні коробки" width="370">
+        <img src="./images/images-portfolio/port5.jpg" alt="Пакувальні коробки" width="370">
         <h2 class="portfolio-title">Проєкт Boxes</h2>
         <p class="portfolio-text">Додаток</p>
       </a>
     </li>
     <li class="portfolio-item">
       <a href="" class="link">
-        <img src="./images/port6.jpg" alt="Монітор" width="370">
+        <img src="./images/images-portfolio/port6.jpg" alt="Монітор" width="370">
         <h2 class="portfolio-title">Inspiration has no Borders</h2>
         <p class="portfolio-text">Веб-сайт</p>
       </a>
     </li>
     <li class="portfolio-item">
       <a href="" class="link">
-        <img src="./images/port7.jpg" alt="Журнал" width="370">
+        <img src="./images/images-portfolio/port7.jpg" alt="Журнал" width="370">
         <h2 class="portfolio-title">Видання Limited Edition</h2>
         <p class="portfolio-text">Дизайн</p>
       </a>
     </li>
     <li class="portfolio-item">
       <a href="" class="link">
-        <img src="./images/port8.jpg" alt="Тег" width="370">
+        <img src="./images/images-portfolio/port8.jpg" alt="Тег" width="370">
         <h2 class="portfolio-title">Проєкт LAB</h2>
         <p class="portfolio-text">Маркетинг</p>
       </a>
     </li>
     <li class="portfolio-item">
       <a href="" class="link">
-        <img src="./images/port9.jpg" alt="Ноутбук" width="370">
+        <img src="./images/images-portfolio/port9.jpg" alt="Ноутбук" width="370">
         <h2 class="portfolio-title">Growing Business</h2>
         <p class="portfolio-text">Додаток</p>
       </a>
     </li>
   </ul>
 </section>
+</main>
+
+
+
+<!-- Footer -->
 
 <footer class="footer">
   <a href="" class="footer-logo link">
