--- a/portfolio.html
+++ b/portfolio.html
@@ -5,156 +5,188 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    />
     <link rel="stylesheet" href="./styles/styles.css" />
 
     <title>Document</title>
-</head>
-<body class="portfolio-main">
-  <header class="page-header">
-    <nav>
-      <a href="" class="logo link"> <span class="web-logo">Web</span>Studio</a>
+  </head>
+  <body class="portfolio-main">
+    <header class="page-header">
+      <nav>
+        <a href="" class="logo link">
+          <span class="web-logo">Web</span>Studio</a
+        >
 
-      <ul class="site-nav list">
-        <li><a href="./index.html" class="link">Студія</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студія</a></li>
 
-        <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
 
-        <li><a href="" class="link">Контакти</a></li>
+          <li><a href="" class="link">Контакти</a></li>
+        </ul>
+      </nav>
+
+      <ul class="contact list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-link link"
+            >info@devstudio.com</a
+          >
+        </li>
+
+        <li>
+          <a href="tel:380961111111" class="contact-link link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
-    </nav>
+    </header>
 
-    <ul class="contact list">
-      <li>
-        <a href="mailto:info@devstudio.com" class="contact-link link"
-          >info@devstudio.com</a
-        >
-      </li>
-
-      <li>
-        <a href="tel:380961111111" class="contact-link link">+38 096 111 11 11</a>
-      </li>
-    </ul>
-  </header>
-
-  <main>
+    <main>
       <section>
-<h1 class="portfolio-main-title visually-hidden">Portfolio</h1>
-<!-- Potfolio nav -->
-<ul class="nav list">
-  <li>  <button type="button" class="nav-button">Усі</button>
-  </li>
-  <li>  <button type="button" class="nav-button">Веб-сайти</button>
-  </li>
-  <li>  <button type="button" class="nav-button">Додатки</button>
-  </li>
-  <li>  <button type="button" class="nav-button">Дизайн</button>
-  </li>
-  <li>  <button type="button" class="nav-button">Маркетинг</button>
-  </li>
-</ul>
-  
+        <h1 class="portfolio-main-title visually-hidden">Portfolio</h1>
+        <!-- Potfolio nav -->
+        <ul class="nav list">
+          <li><button type="button" class="nav-button">Усі</button></li>
+          <li><button type="button" class="nav-button">Веб-сайти</button></li>
+          <li><button type="button" class="nav-button">Додатки</button></li>
+          <li><button type="button" class="nav-button">Дизайн</button></li>
+          <li><button type="button" class="nav-button">Маркетинг</button></li>
+        </ul>
 
-    
+        <!-- Photos for portfolio -->
+        <ul class="portfolio list">
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/images-portfolio/port1.jpg"
+                alt="Ноутбук"
+                width="370"
+              />
+              <h2 class="portfolio-title">Технокряк</h2>
+              <p class="portfolio-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="link">
+              <img
+                src="./images/images-portfolio/port2.jpg"
+                alt=" Два спортсмена"
+                width="370"
+              />
+              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="link">
+              <img
+                src="./images/images-portfolio/port3.jpg"
+                alt="Лого ресторану з рибою"
+                width="370"
+              />
+              <h2 class="portfolio-title">Ресторан Seafood</h2>
+              <p class="portfolio-text">Додаток</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="link">
+              <img
+                src="./images/images-portfolio/port4.jpg"
+                alt="Навушники"
+                width="370"
+              />
+              <h2 class="portfolio-title">Проєкт Prime</h2>
+              <p class="portfolio-text">Маркетинг</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="link">
+              <img
+                src="./images/images-portfolio/port5.jpg"
+                alt="Пакувальні коробки"
+                width="370"
+              />
+              <h2 class="portfolio-title">Проєкт Boxes</h2>
+              <p class="portfolio-text">Додаток</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="link">
+              <img
+                src="./images/images-portfolio/port6.jpg"
+                alt="Монітор"
+                width="370"
+              />
+              <h2 class="portfolio-title">Inspiration has no Borders</h2>
+              <p class="portfolio-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="link">
+              <img
+                src="./images/images-portfolio/port7.jpg"
+                alt="Журнал"
+                width="370"
+              />
+              <h2 class="portfolio-title">Видання Limited Edition</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="link">
+              <img
+                src="./images/images-portfolio/port8.jpg"
+                alt="Тег"
+                width="370"
+              />
+              <h2 class="portfolio-title">Проєкт LAB</h2>
+              <p class="portfolio-text">Маркетинг</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="link">
+              <img
+                src="./images/images-portfolio/port9.jpg"
+                alt="Ноутбук"
+                width="370"
+              />
+              <h2 class="portfolio-title">Growing Business</h2>
+              <p class="portfolio-text">Додаток</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
 
-<!-- Photos for portfolio -->
-      <ul class=" portfolio list">
-          <a href="" class="link">
-            <img src="./images/images-portfolio/port1.jpg" alt="Ноутбук" width="370">
-            <h2 class="portfolio-title">Технокряк</h2>
-            <p class="portfolio-text">Веб-сайт</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a href="" class="link">
-            <img src="./images/images-portfolio/port2.jpg" alt=" Два спортсмена" width="370">
-            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-            <p class="portfolio-text">Дизайн</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a href="" class="link">
-            <img src="./images/images-portfolio/port3.jpg" alt="Лого ресторану з рибою" width="370">
-            <h2 class="portfolio-title">Ресторан Seafood</h2>
-            <p class="portfolio-text">Додаток</p>
-          </a>
-        </li>
-        <li class="portfolio-item">
-          <a href="" class="link">
-            <img src="./images/images-portfolio/port4.jpg" alt="Навушники" width="370">
-            <h2 class="portfolio-title">Проєкт Prime</h2>
-            <p class="portfolio-text">Маркетинг</p>
-          </a>
-        </li>
-    <li class="portfolio-item">
-      <a href="" class="link">
-        <img src="./images/images-portfolio/port5.jpg" alt="Пакувальні коробки" width="370">
-        <h2 class="portfolio-title">Проєкт Boxes</h2>
-        <p class="portfolio-text">Додаток</p>
-      </a>
-    </li>
-    <li class="portfolio-item">
-      <a href="" class="link">
-        <img src="./images/images-portfolio/port6.jpg" alt="Монітор" width="370">
-        <h2 class="portfolio-title">Inspiration has no Borders</h2>
-        <p class="portfolio-text">Веб-сайт</p>
-      </a>
-    </li>
-    <li class="portfolio-item">
-      <a href="" class="link">
-        <img src="./images/images-portfolio/port7.jpg" alt="Журнал" width="370">
-        <h2 class="portfolio-title">Видання Limited Edition</h2>
-        <p class="portfolio-text">Дизайн</p>
-      </a>
-    </li>
-    <li class="portfolio-item">
-      <a href="" class="link">
-        <img src="./images/images-portfolio/port8.jpg" alt="Тег" width="370">
-        <h2 class="portfolio-title">Проєкт LAB</h2>
-        <p class="portfolio-text">Маркетинг</p>
-      </a>
-    </li>
-    <li class="portfolio-item">
-      <a href="" class="link">
-        <img src="./images/images-portfolio/port9.jpg" alt="Ноутбук" width="370">
-        <h2 class="portfolio-title">Growing Business</h2>
-        <p class="portfolio-text">Додаток</p>
-      </a>
-    </li>
-  </ul>
-</section>
-</main>
+    <!-- Footer -->
 
+    <footer class="footer">
+      <a href="" class="footer-logo link">
+        <span class="web-logo">Web</span>Studio</a
+      >
 
-
-<!-- Footer -->
-
-<footer class="footer">
-  <a href="" class="footer-logo link">
-    <span class="web-logo">Web</span>Studio</a
-  >
-
-  <address>
-    <ul class="address list">
-      <li>
-        <a href="" class="address-street link">
-          м. Київ, пр-т Лесі Українки, 26</a
-        >
-      </li>
-      <li>
-        <a href="mailto:info@devstudio.com" class="address-contact link"
-          >info@devstudio.com</a
-        >
-      </li>
-      <li>
-        <a href="tel:380961111111" class="address-contact link"
-          >+38 096 111 11 11</a
-        >
-      </li>
-    </ul>
-  </address>
-</footer>
-
-
-</body>
+      <address>
+        <ul class="address list">
+          <li>
+            <a href="" class="address-street link">
+              м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="address-contact link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:380961111111" class="address-contact link"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
